--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.39.2"
+    "@barba/core": "^2.9.7",
+    "@finsweet/ts-utils": "^0.39.2",
+    "gasp": "^0.0.2",
+    "gsap": "^3.12.1"
   },
   "engines": {
     "pnpm": ">=8"
